--- a/dodong/src/java/messages/messages.properties
+++ b/dodong/src/java/messages/messages.properties
@@ -4,3 +4,7 @@
 
 BookstoreTitle=Dororong Book Store
 MemberInfo=Enter your information into the form
+ID=ID
+ReqUserID=Please enter your ID
+ReqUserPwd=Please enter your password
+Join=JOIN
