--- a/dodong/src/java/messages/messages.properties
+++ b/dodong/src/java/messages/messages.properties
@@ -4,3 +4,13 @@
 
 BookstoreTitle=Dororong Book Store
 MemberInfo=Enter your information into the form
+addBook=Add book
+addMember=JOIN
+BookTitle=TITLE OF BOOK
+Write=WRITE
+Price=PRICE
+userID=ID
+userPwd=PASSWORD
+ReqUserID=Please enter your ID
+ReqUserPwd=Please enter your password
+login=LOGIN
